# Aegis-RAG

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
infra/grafana/dashboards/: aegis-rag.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: prometheus.yml
infra/prometheus/: alerts.yml  prometheus.yml
scripts/: seed_documents.py
src/aegis/: config.py
src/aegis/application/dtos/: ingestion_dtos.py  rag_dtos.py
src/aegis/application/use_cases/: ingest_documents.py  query_rag.py
src/aegis/domain/models/: document.py  ingestion.py  query.py
src/aegis/domain/ports/: document_parser.py  llm_client.py  vector_store.py
src/aegis/domain/services/: chunking_service.py
src/aegis/infrastructure/llm/: ollama_adapter.py
src/aegis/infrastructure/observability/: metrics.py
src/aegis/infrastructure/parsers/: docx_parser.py  markdown_parser.py  parser_registry.py  pdf_parser.py  txt_parser.py
src/aegis/infrastructure/security/: output_sanitizer.py  rate_limiter.py  security_gateway.py
src/aegis/infrastructure/vector_stores/: chromadb_adapter.py
src/aegis/interface/api/: dependencies.py  main.py
src/aegis/interface/api/middleware/: security_middleware.py
src/aegis/interface/api/routes/: documents.py  health.py  query.py
tests/: conftest.py
tests/e2e/: conftest.py  test_e2e_stack.py
tests/integration/: test_ingestion_pipeline.py
tests/unit/: test_chunking_service.py  test_metrics_endpoint.py  test_middleware.py  test_output_sanitizer.py  test_query_rag_use_case.py  test_query_route.py  test_rate_limiter.py  test_security_gateway.py
